DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2002-09-09 nonchocoboy  Added caching semantics to the SoundEffectManager so
                        that sound effects are loaded into memory when they are
                        first needed and then reused thereafter.
2002-09-08 nonchocoboy  SpreadGun discharges a single bullet at a time,
                        iterating over the barrels.
2002-09-07 nonchocoboy  Added version information in Version.h
                        NEW VERSION: 0.1.0
2002-09-07 nonchocoboy  Entities now have a UID associated with them. The
                        AbstractEntity class was added to manage UIDs in a
                        common way for most entity implementations.
2002-09-07 nonchocoboy  Added UIDManager for automatic unique ID management.
2002-07-29 nonchocoboy  Added collision notifcation event framework.
2002-07-28 nonchocoboy  Integrated basic collision detection into the game.
2002-07-28 nonchocoboy  Added Entity abstraction on top of RigidBody.
                        Generalized GrimReaper and GameState to only manage
                        entities in order to simplify game resource management.
2002-07-05 daren        Added in a BaseBullet for all bullets, and a GrimReaper
                        to clean up the bullets.  createBullet now makes
                        BaseBullet types instead of RigidBodies.
2002-07-05 subatomic    Implemented virtual game cursor, hiding/warping the
                        system mouse now, add this to GameState/MenuState
2002-07-05 subatomic    Weapon slots work with 0-9 keys and multi weapons per
                        slot.
2002-07-04 nonchocoboy  Added a simple HUD. We now depend on GLText.
2002-07-01 areinot      Added Shotgun weapon.
2002-06-18 nonchocoboy  Weapon framework started. Player can now shoot by
           areinot      clicking about with the mouse with accurate reload