@@ -1,8 +1,45 @@
-#include "Application.h"
+/* -*- Mode: C++; tab-width: 8; indent-tabs-mode: nil c-basic-offset: 3 -*- */
+// vim:cindent:ts=3:sw=3:et:tw=80:sta:
+/************************************************************* midworld-cpr beg
+ *
+ * midworld - retro post-nuclear mayhem
+ * midworld is (C) Copyright 2002 by
+ *    Chad Austin, Josh Brown, Johnathan Gurley,
+ *    Kevin Meinert, Andres Reinot, Ben Scott
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ *
+ * -----------------------------------------------------------------
+ * File:          $RCSfile: CreditsState.cpp,v $
+ * Date modified: $Date: 2002-09-09 07:06:03 $
+ * Version:       $Revision: 1.2 $
+ * -----------------------------------------------------------------
+ *
+ ********************************************************** midworld-cpr-end */
 #include "CreditsState.h"
+#include "Application.h"
+#include "StateFactory.h"
 
 namespace mw
 {
+   namespace
+   {
+      StateCreatorImpl<CreditsState> creator("Credits");
+   }
+
    CreditsState::CreditsState( Application* a ) : State( a )
    {
       mImages.push_back( new Texture("credits.jpeg") );
@@ -30,5 +67,13 @@ namespace mw
 
       glColor4f(1, 1, 1, 1);
       mImages[0]->drawRectangle(0,0,this->application().getWidth(), this->application().getHeight());	// draw background
+   }
+
+   void CreditsState::onKeyPress(SDLKey sym, bool down)
+   {
+      if (down)
+      {
+         invokeTransition("Menu");
+      }
    }
 }
